examples/compiler_errors/adversarial/common_dev_mistakes/UnknownBaseMemberTypo.flx
module UnknownBaseMemberTypo {
    fn bad() -> Unit with IO {
        Base.prnit("x")
    }
}
